plugins {
    id 'application'
}

application {
    // For some reason spark needs to access some java class but it can't without this line
    applicationDefaultJvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens=java.base/sun.security.action=ALL-UNNAMED']
}

run {
    // Tell the application to accept input from the console
    standardInput = System.in
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:31.1-jre'

    implementation 'org.apache.spark:spark-core_2.12:3.4.0'
    implementation 'org.apache.spark:spark-sql_2.12:3.4.0'   

    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
    implementation 'org.jdom:jdom2:2.0.6.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// Define the main class for the application.
jar {
    manifest {
        attributes(
            'Main-Class': 'FeedReaderMain'
        )
    }
}

mainClassName = 'FeedReaderMain'